@@ -10,7 +10,7 @@ from fastflix.encoders.common.attachments import build_attachments
 from fastflix.encoders.common.audio import build_audio
 from fastflix.encoders.common.subtitles import build_subtitle
 from fastflix.models.fastflix import FastFlix
-from fastflix.shared import clean_file_string, sanitize
+from fastflix.shared import clean_file_string, sanitize, quoted_path
 
 null = "/dev/null"
 if reusables.win_based:
@@ -193,7 +193,7 @@ def generate_filters(
             else:
                 filter_complex = f"[0:{selected_track}][0:{burn_in_subtitle_track}]overlay[v]"
         else:
-            filter_complex = f"[0:{selected_track}]{f'{filters},' if filters else ''}subtitles='{clean_file_string(source)}':si={burn_in_subtitle_track}[v]"
+            filter_complex = f"[0:{selected_track}]{f'{filters},' if filters else ''}subtitles={quoted_path(clean_file_string(source))}:si={burn_in_subtitle_track}[v]"
     elif filters:
         filter_complex = f"[0:{selected_track}]{filters}[v]"
     else:
