@@ -11,6 +11,7 @@
 * Adding #322 warning if profile audio match doesn't match anything (thanks to wynterca)
 * Fixing #319 no longer disables built in tracks for profile matching (thanks to Owen Quinlan)
 * Fixing #218 and #308 subtitle scaling with rigaya's hardware encoders needs to be scaled for 4K content (thanks to wynterca)
+* Fixing #350 subtitle burn in quoting (thanks to Maddie Davis)
 * Fixing Chinese translations (thanks to leonardyan)
 
 ## Version 4.9.4
